--- a/.gitignore
+++ b/.gitignore
@@ -101,6 +101,7 @@ fabric.properties
 ### Intellij Patch ###
 # Comment Reason: https://github.com/joeblau/gitignore.io/issues/186#issuecomment-215987721
 .idea/
+*.iml
 
 ### Java ###
 # Compiled class file
@@ -142,7 +143,7 @@ tags
 
 ### Gradle ###
 .gradle
-/build/
+build/
 
 # Ignore Gradle GUI config
 gradle-app.setting
