Add gradle sample.
Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/settings.gradle
+++ b/settings.gradle
@@ -1,6 +1,9 @@
 rootProject.name = "ktlint-gradle-samples"
 
-include(':kotlin')
-project(':kotlin').projectDir = new File('./samples/kotlin')
+include(':kotlin-ks')
+project(':kotlin-ks').projectDir = new File('./samples/kotlin-ks')
+
+include(':kotlin-gradle')
+project(':kotlin-gradle').projectDir = new File('./samples/kotlin-gradle')
 
 includeBuild('./plugin')
