Add minimal plugin configuration in samples.
Set verbose to true and set custom reporter type.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -7,3 +7,8 @@ mainClassName = "org.jlleitschuh.gradle.ktlint.sample.gradle.MainKt"
 dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib"
 }
+
+ktlint {
+    verbose = true
+    reporter = "checkstyle"
+}
