Add Android ci config for Android sample.
Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,4 +1,7 @@
-language: java
+language: android
+android:
+  components:
+    - andoroid-26
 
 script:
   - ./plugin/gradlew -p ./plugin build --no-daemon
