Add installing missing android components in CI script.
Travis tools doesn't install latest android components, has to do it
manually.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,12 @@
 language: android
-android:
-  components:
-    - andoroid-26
+jdk:
+  - oraclejdk8
+install:
+  - yes | sdkmanager --verbose "build-tools;26.0.2"
+  - yes | sdkmanager --verbose "platform-tools"
+  - yes | sdkmanager --verbose "tools"
+  - yes | sdkmanager --verbose "platforms;android-27"
+  - yes | sdkmanager --verbose "extras;android;m2repository"
 
 script:
   - ./plugin/gradlew -p ./plugin build --no-daemon
