Cleanup android sample.
Remove old package name, fix multi-import.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/samples/android-app/src/main/AndroidManifest.xml
+++ b/samples/android-app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="by.egorr.myapplication">
+          package="org.jlleitschuh.gradle.ktlint.android">
 
     <application
         android:allowBackup="true"
@@ -10,7 +10,7 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
-            android:name=".ItemListActivity"
+            android:name="ItemListActivity"
             android:label="@string/app_name"
             android:theme="@style/AppTheme.NoActionBar">
             <intent-filter>
@@ -26,7 +26,7 @@
             android:theme="@style/AppTheme.NoActionBar">
             <meta-data
                 android:name="android.support.PARENT_ACTIVITY"
-                android:value="by.egorr.myapplication.ItemListActivity"/>
+                android:value="org.jlleitschuh.gradle.ktlint.android.ItemListActivity"/>
         </activity>
     </application>
 
