Adding more samples (#49)
* Move sample root project one level up.

This make easier to open whole project in different IDE.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Rename kotlin sample project folder.

This will reflect that it uses kotlin script and will allow
to add common gradle sample.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Add gradle sample.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Add minimal plugin configuration in samples.

Set verbose to true and set custom reporter type.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Add Android sample.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Add Android ci config for Android sample.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Update CI job to reflect samples changes.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Add installing missing android components in CI script.

Travis tools doesn't install latest android components, has to do it
manually.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Update gradle wrapper to 4.4.1 version.

This is required to be able to migrate to settings.gradle.kts.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Migrate android sample to gradle kotlin script.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Remove not needed non-null assertion operator.

This is not needed after update to latest gradle wrapper.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

* Cleanup android sample.

Remove old package name, fix multi-import.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,9 +1,17 @@
-language: java
+language: android
+jdk:
+  - oraclejdk8
+install:
+  - yes | sdkmanager --verbose "build-tools;26.0.2"
+  - yes | sdkmanager --verbose "platform-tools"
+  - yes | sdkmanager --verbose "tools"
+  - yes | sdkmanager --verbose "platforms;android-27"
+  - yes | sdkmanager --verbose "extras;android;m2repository"
 
 script:
   - ./plugin/gradlew -p ./plugin build --no-daemon
   - ./plugin/gradlew -p ./plugin ktlintCheck --no-daemon
-  - ./samples/gradlew -p ./samples :kotlin:ktlintCheck --no-daemon
+  - ./gradlew ktlintCheck --no-daemon
 
 before_cache:
   - rm -f  $HOME/.gradle/caches/modules-2/modules-2.lock
