Change back ReporterType types to uppercase.
Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -10,5 +10,6 @@ dependencies {
 
 ktlint {
     verbose = true
-    reporter = "checkstyle"
+    // For now have to be uppercase, see https://github.com/gradle/gradle/issues/4030
+    reporters = ["CHECKSTYLE"]
 }
