Set default reporters value to plain reporter.
Also remove plain reporter from deprecated reporter field in extension.

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -11,5 +11,5 @@ dependencies {
 ktlint {
     verbose = true
     // For now have to be uppercase, see https://github.com/gradle/gradle/issues/4030
-    reporters = ["CHECKSTYLE"]
+    reporters = ["CHECKSTYLE", "PLAIN"]
 }
