Added linting, which currently only works for JVM

--- a/samples/kotlin-multiplatform/build.gradle
+++ b/samples/kotlin-multiplatform/build.gradle
@@ -9,6 +9,9 @@ buildscript {
     }
 }
 
+plugins {
+  id "org.jlleitschuh.gradle.ktlint" version "3.0.0"
+}
 
 apply plugin: 'kotlin-platform-common'
 
@@ -20,4 +23,11 @@ dependencies {
     compile "org.jetbrains.kotlin:kotlin-stdlib-common:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-annotations-common:$kotlin_version"
     testCompile "org.jetbrains.kotlin:kotlin-test-common:$kotlin_version"
+}
+
+ktlint {
+    debug = false
+    verbose = true
+    android = false
+    ignoreFailures = true
 }
