--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -1,3 +1,5 @@
+import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
+
 apply plugin: 'org.jlleitschuh.gradle.ktlint'
 apply plugin: 'kotlin'
 apply plugin: 'application'
@@ -9,7 +11,7 @@ dependencies {
 }
 
 ktlint {
+    debug = true
     verbose = true
-    // For now have to be uppercase, see https://github.com/gradle/gradle/issues/4030
-    reporters = ["CHECKSTYLE", "PLAIN"]
+    reporters = [ReporterType.CHECKSTYLE, ReporterType.PLAIN]
 }
