--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -1,8 +1,10 @@
 import org.jlleitschuh.gradle.ktlint.reporter.ReporterType
 
-apply plugin: 'org.jlleitschuh.gradle.ktlint'
-apply plugin: 'kotlin'
-apply plugin: 'application'
+plugins {
+    id 'kotlin'
+    id 'application'
+    id 'org.jlleitschuh.gradle.ktlint'
+}
 
 mainClassName = "org.jlleitschuh.gradle.ktlint.sample.gradle.MainKt"
 
