--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -19,7 +19,7 @@ ktlint {
 
         customReporters {
             "html" {
-                reporterFileExtension = "html"
+                fileExtension = "html"
                 dependency = "me.cassiano:ktlint-html-reporter:0.2.3"
             }
         }
