--- a/samples/kotlin-gradle/build.gradle
+++ b/samples/kotlin-gradle/build.gradle
@@ -7,7 +7,7 @@ plugins {
 mainClassName = "org.jlleitschuh.gradle.ktlint.sample.gradle.MainKt"
 
 dependencies {
-    compile "org.jetbrains.kotlin:kotlin-stdlib"
+    implementation "org.jetbrains.kotlin:kotlin-stdlib"
 }
 
 ktlint {
