Add additional missing steps to github actions.
Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -17,3 +17,12 @@ jobs:
       run: ./plugin/gradlew -p ./plugin build --no-daemon
     - name: Check plugin codestyle
       run: ./plugin/gradlew -p ./plugin ktlintCheck --no-daemon
+    - name: Install checkbashisms
+      run: sudo apt-get install -qq devscripts
+    - name: Check git bashisms
+      run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon && checkbashisms .git/hooks/pre-commit
+    - name: Check ktlint-plugin on samples
+      uses: msfjarvis/setup-android@1.0
+      with:
+        entrypoint: ./gradlew
+        args: ktlintCheck --no-daemon
