--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -4,25 +4,39 @@ on: [pull_request, push]
 
 jobs:
   build:
-
     runs-on: ubuntu-latest
-
     steps:
-    - uses: actions/checkout@v1
-    - name: set up JDK 1.8
-      uses: actions/setup-java@v1
-      with:
-        java-version: 1.8
-    - name: Build plugin
-      run: ./plugin/gradlew -p ./plugin build --no-daemon
-    - name: Check plugin codestyle
-      run: ./plugin/gradlew -p ./plugin ktlintCheck --no-daemon
-    - name: Install checkbashisms
-      run: sudo apt-get install -qq devscripts
-    - name: Check git bashisms
-      run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon && checkbashisms .git/hooks/pre-commit
-    - name: Check ktlint-plugin on samples
-      uses: msfjarvis/setup-android@1.0
-      with:
-        entrypoint: ./gradlew
-        args: ktlintCheck --no-daemon
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Build plugin
+        run: ./plugin/gradlew -p ./plugin build --no-daemon
+      - name: Check plugin codestyle
+        run: ./plugin/gradlew -p ./plugin ktlintCheck --no-daemon
+
+  check_bashisms:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v1
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
+        with:
+          java-version: 1.8
+      - name: Install checkbashisms
+        run: sudo apt-get install -qq devscripts
+      - name: Check git bashisms
+        run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon && checkbashisms .git/hooks/pre-commit
+
+  check_samples:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v1
+      - name: Check ktlint-plugin on samples
+        uses: msfjarvis/setup-android@1.0
+        with:
+          entrypoint: ./gradlew
+          args: ktlintCheck --no-daemon
