--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -35,8 +35,9 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v1
-      - name: Check ktlint-plugin on samples
-        uses: msfjarvis/setup-android@1.0
+      - name: set up JDK 1.8
+        uses: actions/setup-java@v1
         with:
-          entrypoint: ./gradlew
-          args: ktlintCheck --no-daemon
+          java-version: 1.8
+      - name: Check ktlint-plugin on samples
+        run: ./gradlew ktlintCheck --no-daemon
