Update Gradle to 6.7.1 version.
Changelog: https://docs.gradle.org/6.7.1/release-notes.html

Signed-off-by: Yahor Berdnikau <egorr.berd@gmail.com>

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,7 @@
 org.gradle.configureondemand=false
+org.gradle.vfs.watch=true
 org.gradle.jvmargs=-XX:MaxMetaspaceSize=512m
+
+kotlin.mpp.stability.nowarn=true
 
 android.useAndroidX=true
