--- a/.gitignore
+++ b/.gitignore
@@ -158,3 +158,5 @@ gradle-app.setting
 # gradle/wrapper/gradle-wrapper.properties
 
 # End of https://www.gitignore.io/api/eclipse,gradle,intellij,vim,java
+
+.gradle-test-kit
