Update Gradle to 7.1.1 version.
- Switched to version catalog feature
- Cleanup build scripts

--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -1,3 +1,4 @@
 org.gradle.parallel=true
 org.gradle.configureondemand=false
 org.gradle.vfs.watch=true
+#org.gradle.unsafe.configuration-cache=true
