--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -17,9 +17,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 8
+          distribution: 'zulu'
       - name: Restore Gradle caches
         uses: actions/cache@v1
         with:
@@ -67,9 +68,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 8
+          distribution: 'zulu'
       - name: Install checkbashisms
         run: sudo apt-get install -qq devscripts
       - name: Restore Gradle caches
@@ -98,9 +100,10 @@ jobs:
     steps:
       - uses: actions/checkout@v1
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 8
+          distribution: 'zulu'
       - name: Restore Gradle caches
         uses: actions/cache@v1
         with:
