--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -11,9 +11,10 @@ jobs:
     steps:
       - uses: actions/checkout@v2
       - name: set up JDK 1.8
-        uses: actions/setup-java@v1
+        uses: actions/setup-java@v2
         with:
-          java-version: 1.8
+          java-version: 8
+          distribution: 'zulu'
       - name: Restore Gradle caches
         uses: actions/cache@v1
         with:
