--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -34,10 +34,10 @@ jobs:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           GITHUB_KEY: ${{ secrets.GithubKey }}
-        run: ./plugin/gradlew -p ./plugin publishPlugins --no-daemon
+        run: ./gradlew plugin:publishPlugins --no-daemon
       - name: Create new Github release
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
           GITHUB_KEY: ${{ secrets.GithubKey }}
-        run: ./plugin/gradlew -p ./plugin githubRelease --no-daemon
+        run: ./gradlew plugin:githubRelease --no-daemon
