--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -99,10 +99,10 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: set up JDK 8
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: 8
           distribution: 'zulu'
       - name: Restore Gradle caches
         uses: actions/cache@v2
@@ -119,4 +119,4 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-wrapper-
       - name: Check ktlint-plugin on samples
-        run: ./gradlew ktlintCheck --no-daemon
+        run: ./gradlew ktlintCheck --no-daemon -x :sample:android-app:ktlintCheck :sample:kotlin-mpp-android:ktlintCheck
