Separate `Check git bashisms` job

--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -88,8 +88,10 @@ jobs:
           key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
           restore-keys: |
             ${{ runner.os }}-gradle-wrapper-
+      - name: Add hook
+        run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon
       - name: Check git bashisms
-        run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon && checkbashisms .git/hooks/pre-commit
+        run: checkbashisms .git/hooks/pre-commit
 
   check_samples:
     strategy:
