--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -67,10 +67,10 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 11
+      - name: set up JDK 8
         uses: actions/setup-java@v2
         with:
-          java-version: 11
+          java-version: 8
           distribution: 'zulu'
       - name: Install checkbashisms
         run: sudo apt-get install -qq devscripts
@@ -89,7 +89,7 @@ jobs:
           restore-keys: |
             ${{ runner.os }}-gradle-wrapper-
       - name: Add hook
-        run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon
+        run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon -x :sample:android-app:addKtlintCheckGitPreCommitHook :sample:kotlin-mpp-android:addKtlintCheckGitPreCommitHook
       - name: Check git bashisms
         run: checkbashisms .git/hooks/pre-commit
 
