--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -93,6 +93,37 @@ jobs:
       - name: Check git bashisms
         run: checkbashisms .git/hooks/pre-commit
 
+  check_android_bashisms:
+    runs-on: ubuntu-latest
+    needs: build
+    steps:
+      - uses: actions/checkout@v2
+      - name: set up JDK 11
+        uses: actions/setup-java@v2
+        with:
+          java-version: 11
+          distribution: 'zulu'
+      - name: Install checkbashisms
+        run: sudo apt-get install -qq devscripts
+      - name: Restore Gradle caches
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/caches
+          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}-${{ hashFiles('**/gradle.properties') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-cache-
+      - name: Restore Gradle wrapper
+        uses: actions/cache@v2
+        with:
+          path: ~/.gradle/wrapper
+          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
+          restore-keys: |
+            ${{ runner.os }}-gradle-wrapper-
+      - name: Add hook
+        run: ./gradlew :sample:android-app:addKtlintCheckGitPreCommitHook :sample:kotlin-mpp-android:addKtlintCheckGitPreCommitHook
+      - name: Check git bashisms
+        run: checkbashisms .git/hooks/pre-commit
+
   check_samples:
     strategy:
       matrix:
