--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -20,4 +20,4 @@ jobs:
       - uses: actions/upload-artifact@v3
         with:
           name: release_notes
-          path: RELEASE_NOTES.md
+          path: CHANGELOG.md
