--- a/.github/workflows/prepare_release.yaml
+++ b/.github/workflows/prepare_release.yaml
@@ -2,8 +2,9 @@ name: "Prepare for Release"
 on:
   workflow_dispatch:
     inputs:
-       tag:
-         description: 'Release Tag Version'
+       new_version:
+         
+         description: "Release Version (no 'v')"
          required: true
          type: string
 
@@ -16,7 +17,8 @@ jobs:
       - name: Update Changelog
         uses: thomaseizinger/keep-a-changelog-new-release@1.3.0
         with:
-          tag: ${{ github.event.inputs.tag }}
+          tag: v${{ github.event.inputs.new_version }}
+          version: ${{ github.event.inputs.new_version }}
       - uses: actions/upload-artifact@v3
         with:
           name: release_notes
