--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -39,5 +39,5 @@ jobs:
         env:
           GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
           GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
-          GITHUB_KEY: ${{ secrets.GithubKey }}
+          GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
         run: ./plugin/gradlew -p ./plugin githubRelease --no-daemon
