--- a/.github/workflows/perform-release.yaml
+++ b/.github/workflows/perform-release.yaml
@@ -1,4 +1,4 @@
-name: "Prepare for Release"
+name: "Perform Release"
 on:
   workflow_dispatch:
     inputs:
@@ -9,7 +9,7 @@ on:
          type: string
 
 jobs:
-  prepare-for-release:
+  perform-release:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout code
@@ -27,7 +27,9 @@ jobs:
           sed -i 's|\(Latest plugin version: \[\).*\(\](/CHANGELOG.md#\).*---.*)|\1'"$new_version"'\2'"$stripped_version"'---'"$formatted_date"')|' README.md
       - name: Update VERSION_CURRENT
         run: printf "${{ github.event.inputs.new_version }}\n" > plugin/VERSION_CURRENT.txt
-      - uses: stefanzweifel/git-auto-commit-action@v4
+      - name: Perform Release Tagging and Push
+        # This will trigger the new release job that will take the tag and push the release to the plugin portal
+        uses: stefanzweifel/git-auto-commit-action@v4
         with:
           commit_message: Release version ${{ github.event.inputs.new_version }}
           tagging_message: 'v${{ github.event.inputs.new_version }}'
