--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -66,7 +66,9 @@ jobs:
           name: memory-dump-${{ runner.os }}
           path: |
             hs_err_pid*
+            replay_pid*
             plugin/hs_err_pid*
+            plugin/replay_pid*
       - name: Check plugin codestyle
         run: ./plugin/gradlew -p ./plugin ktlintCheck --no-daemon
 
