--- a/plugin/gradle/libs.versions.toml
+++ b/plugin/gradle/libs.versions.toml
@@ -1,6 +1,6 @@
 [versions]
 kotlin = "1.5.31"
-ktlint = "0.43.2"
+ktlint = "0.45.2" # last version prior to API changes. we can increase this more once we drop support for the old API.
 androidPlugin = "4.1.0"
 semver = "1.1.1"
 jgit = "5.6.0.201912101111-r"
