--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -42,7 +42,7 @@ jobs:
           GITHUB_KEY: ${{ secrets.GITHUB_TOKEN }}
         run: ./plugin/gradlew -p ./plugin githubRelease --no-daemon
       - name: Update VERSION_LATEST_RELEASE to new published version
-        run: cp plugin/VERSION_CURRENT.txt > plugin/VERSION_LATEST_RELEASE.txt
+        run: cp plugin/VERSION_CURRENT.txt plugin/VERSION_LATEST_RELEASE.txt
       - name: Update VERSION_LATEST_RELEASE
         uses: stefanzweifel/git-auto-commit-action@v4
         with:
