--- a/.editorconfig
+++ b/.editorconfig
@@ -7,6 +7,9 @@ trim_trailing_whitespace = true
 
 [*.{kt,kts}]
 indent_size = 4
+ij_kotlin_packages_to_use_import_on_demand = unset
+ij_kotlin_name_count_to_use_star_import = 999
+ij_kotlin_name_count_to_use_star_import_for_members = 999
 
 [*.{yml,yaml}]
 indent_size = 2
