decrease plugin build workers to 4 to prevent thrashing

--- a/plugin/gradle.properties
+++ b/plugin/gradle.properties
@@ -3,3 +3,5 @@ org.gradle.configureondemand=false
 org.gradle.vfs.watch=true
 # Shadow plugin does not fully support configuration cache: https://github.com/johnrengelman/shadow/issues/687
 #org.gradle.unsafe.configuration-cache=true
+
+org.gradle.workers.max = 4
