--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -30,7 +30,7 @@ jobs:
       - uses: actions/checkout@v2
       - name: configure windows pagefile
         if: ${{ matrix.os  == 'windows-latest' }}
-        uses: al-cheb/configure-pagefile-action@v1.2
+        uses: al-cheb/configure-pagefile-action@v1.3
         with:
           minimum-size: 8GB
           maximum-size: 8GB
@@ -96,11 +96,13 @@ jobs:
     needs: build
     steps:
       - uses: actions/checkout@v2
-      - name: set up JDK 1.8
+      - name: set up JDK 11
         uses: actions/setup-java@v2
         with:
-          java-version: 8
+          java-version: 11
           distribution: 'zulu'
+      - name: Install lintian
+        run: sudo apt install -qq lintian=2.114.0ubuntu1.3
       - name: Install checkbashisms
         run: sudo apt-get install -qq devscripts
       - name: Restore Gradle caches
