--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -101,8 +101,12 @@ jobs:
         with:
           java-version: 11
           distribution: 'zulu'
+      - name: update apt
+        run: sudo apt update
       - name: Install lintian
         run: sudo apt install -qq lintian=2.114.0ubuntu1.3
+      - name: Install libdistro
+        run: sudo apt install -qq libdistro-info-perl
       - name: Install checkbashisms
         run: sudo apt-get install -qq devscripts
       - name: Restore Gradle caches
