--- a/plugin/.editorconfig
+++ b/plugin/.editorconfig
@@ -10,6 +10,8 @@ indent_size = 4
 ij_kotlin_packages_to_use_import_on_demand = unset
 ij_kotlin_name_count_to_use_star_import = 999
 ij_kotlin_name_count_to_use_star_import_for_members = 999
+ij_kotlin_allow_trailing_comma = false
+ij_kotlin_allow_trailing_comma_on_call_site = false
 ktlint_code_style=intellij_idea
 
 [*.{yml,yaml}]
