--- a/.github/workflows/build-and-check.yml
+++ b/.github/workflows/build-and-check.yml
@@ -40,36 +40,9 @@ jobs:
         with:
           java-version: ${{ matrix.java_version }}
           distribution: 'zulu'
-      - name: Restore Gradle caches
-        uses: actions/cache@v2
+      - uses: gradle/gradle-build-action@v2
         with:
-          path: |
-            ~/.gradle/caches/modules-2
-            ~/.gradle/caches/files-2.1
-            ~/.gradle/caches/metadata-2.96
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}-${{ hashFiles('**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      # Inspired by https://github.com/actions/cache/issues/432#issuecomment-740376179
-      - name: Restore TestKit cache
-        uses: actions/cache@v2
-        with:
-          path: |
-            plugin/.gradle-test-kit/caches/modules-2
-            plugin/.gradle-test-kit/caches/files-2.1
-            plugin/.gradle-test-kit/caches/metadata-2.96
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}-${{ github.sha }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}-
-            ${{ runner.os }}-gradle-wrapper-
-      - name: Restore Gradle wrapper
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
+          gradle-home-cache-cleanup: true
       - name: Build plugin
         run: ./plugin/gradlew -p ./plugin assemble ensureDependenciesAreInlined test --no-daemon
       - name: Upload test results
@@ -109,20 +82,9 @@ jobs:
         run: sudo apt install -qq libdistro-info-perl
       - name: Install checkbashisms
         run: sudo apt-get install -qq devscripts
-      - name: Restore Gradle caches
-        uses: actions/cache@v2
+      - uses: gradle/gradle-build-action@v2
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}-${{ hashFiles('**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - name: Restore Gradle wrapper
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
+          gradle-home-cache-cleanup: true
       - name: Check git bashisms
         run: ./gradlew addKtlintCheckGitPreCommitHook --no-daemon && checkbashisms .git/hooks/pre-commit
 
@@ -139,19 +101,8 @@ jobs:
         with:
           java-version: 8
           distribution: 'zulu'
-      - name: Restore Gradle caches
-        uses: actions/cache@v2
+      - uses: gradle/gradle-build-action@v2
         with:
-          path: ~/.gradle/caches
-          key: ${{ runner.os }}-gradle-cache-${{ hashFiles('**/*.gradle.kts') }}-${{ hashFiles('**/gradle.properties') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-cache-
-      - name: Restore Gradle wrapper
-        uses: actions/cache@v2
-        with:
-          path: ~/.gradle/wrapper
-          key: ${{ runner.os }}-gradle-wrapper-${{ hashFiles('**/gradlew') }}
-          restore-keys: |
-            ${{ runner.os }}-gradle-wrapper-
+          gradle-home-cache-cleanup: true
       - name: Check ktlint-plugin on samples
         run: ./gradlew ktlintCheck --no-daemon
