--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -8,6 +8,7 @@ jobs:
   make-new-release:
     name: "Releasing plugin"
     runs-on: ubuntu-latest
+    if: github.repository == 'JLLeitschuh/ktlint-gradle'
     env:
       GRADLE_PUBLISH_KEY: ${{ secrets.GRADLE_PUBLISH_KEY }}
       GRADLE_PUBLISH_SECRET: ${{ secrets.GRADLE_PUBLISH_SECRET }}
