--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,6 +7,8 @@ version: 2
 updates:
   - package-ecosystem: github-actions
     directory: "/" # Location of package manifests
+    labels:
+      - "skip news"
     schedule:
       interval: "weekly"
   - package-ecosystem: gradle
