--- a/.github/workflows/new-release.yml
+++ b/.github/workflows/new-release.yml
@@ -8,8 +8,14 @@ jobs:
   make-new-release:
     name: "Releasing plugin"
     runs-on: ubuntu-latest
+    permissions:
+      # Give the default GITHUB_TOKEN write permission to commit and push the
+      # changed files to the repository.
+      contents: write
     steps:
       - uses: actions/checkout@v4.2.2
+        with:
+          ref: ${{ github.head_ref }}
       - name: set up JDK 1.8
         uses: actions/setup-java@v4
         with:
